# vta-converter

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  video.cpp  video.h
engine/: scaling.h
src/: CMakeLists.txt  animation.cpp  animation.h  main.cpp  video.cpp  video.h
src/engine/: constants.cpp  constants.h  rle.cpp  rle.h  scaling.cpp  scaling.h
src/utils/: ansicode.cpp  ansicode.h
utils/: ansicode.cpp  ansicode.h  debug_func.cpp  debug_func.h
